Update Programmation WEB Elouick.html

--- a/Programmation WEB Elouick.html
+++ b/Programmation WEB Elouick.html
@@ -59,7 +59,7 @@
         <div class="accordion-item">
             <div class="accordion-header">Image de la Faculté de Droit</div>
             <div class="accordion-content">
-                <p> <img src="/Users/elouick/Documents/Ressources diverses/Web/facdroit.jpg"></p> 
+                <p> <img src="Campus_André_Boulle.jpg"></p> 
             </div>
         </div>
         <div class="accordion-item">
