--- a/Programmation WEB Elouick.html
+++ b/Programmation WEB Elouick.html
@@ -53,7 +53,7 @@
         <div class="accordion-item">
             <div class="accordion-header">Fichier local</div>
             <div class="accordion-content">
-                <p> <a href="/Users/elouick/Documents/Ressources diverses/Web/Informations sur la licence de Droit à l'Upec.txt"> Description de licence de droit à l'Upec</a></p>
+                <p> <a href="Informations sur la licence de Droit à l'Upec.txt"> Description de licence de droit à l'Upec</a></p>
             </div>
         </div>
         <div class="accordion-item">
