Modification de répertoires

--- a/Landing_Page.html
+++ b/Landing_Page.html
@@ -36,5 +36,5 @@
 <body>
     <h1>Bienvenue sur ma page d'accueil !</h1>
 
-    <p> <a href="Programmation WEB Elouick.html" target="_blank"> Accéder à un mon site web incroyable avec des images et des liens</a></p>
+    <p> <a href="Ressources de Landing_Page/Programmation WEB Elouick.html" target="_blank"> Accéder à un mon site web incroyable avec des images et des liens</a></p>
 </body>
